Fix extra spacing and footer issue

--- a/src/style.css
+++ b/src/style.css
@@ -272,6 +272,7 @@ a:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
   margin: var(--spacing-0) var(--spacing-4);
 }
 
